stopped jumbotron from being covered when screen size is changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,12 +49,6 @@ ul.dropdown-lr {
     background-color: transparent;
 }
 
-/* g added*/
-.jumbotron-fluid{
-    padding: 10px 0 10px 0;
-    margin-top: 70px;
-}
-
 .city-card {
     width: 260px;
     border: 1px solid rgb(65, 137, 245);
@@ -68,10 +62,6 @@ ul.dropdown-lr {
 .city-card h3 {
     margin-bottom: 8px;
 }
-
-/* #results {
-   float: left;
-} */
 
 .btn-outline-danger {
     width: 40px;
@@ -121,4 +111,23 @@ ul.dropdown-lr {
 
 .col-xs-5.pull-right {
     padding: 0 5px;
+}
+
+/* Fixes to stop jumbotron from being covered */
+@media screen and (max-width: 853px) {
+    .jumbotron-fluid{
+        margin-top: 108px;
+    }
+}
+
+@media screen and (max-width: 714px) {
+    .jumbotron-fluid{
+        margin-top: 131.2px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .jumbotron-fluid{
+        margin-top: 178px;
+    }
 }
